version = '1.0'
project.ext {
    type = "server"
}

apply plugin: 'application'
apply plugin: 'kotlin'

compileKotlin {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

dependencies {
    implementation project(':kronos-api')
    implementation("org.mindrot:jbcrypt:0.4")
    implementation group: 'com.typesafe', name: 'config', version:'1.3.1'
    implementation group: 'net.dv8tion', name: 'JDA', version: '5.5.1'
    implementation group: 'org.jsoup', name: 'jsoup', version: '1.15.3'
    implementation group: 'io.undertow', name: 'undertow-core', version: '2.3.21.Final'
    implementation 'com.mashape.unirest:unirest-java:1.4.9'
    //compile group: 'de.brudaswen.kotlinx.coroutines', name: 'kotlinx-coroutines-swt', version: '1.0.0'
    implementation group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-core', version: '1.3.7'
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version:'2.1.21'
    implementation group: 'com.ea.agentloader', name: 'ea-agent-loader', version: '1.0.3'
    // https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-yaml
    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.11.0'

}

application {
    mainClassName = 'io.ruin.Server'
}

application {
    mainClassName = 'io.ruin.Server'
    applicationDefaultJvmArgs = [
            "--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED"
    ]
}

compileJava {
    options.compilerArgs.addAll([
            '--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED'
    ])
}